@@ -1,3 +1,7 @@
+drkns 14.06.2016 18:31:09 +0200 - build 4707
+
+1. Системные ассоциации, у которых "associated program" - bat или cmd, запускались в отдельном окне.
+
 drkns 13.06.2016 19:32:18 +0200 - build 4706
 
 1. С форума: проблема с панелями Fullscreen view
